tests/NormalTests/paczka1/small_fuzzy/96945641.err
Error in line 1: R4RW S413 1,7
Error in line 4: vTlR25y3o S178 14,5
